# esper

./: LICENSE  README.md
hardware/: .gitignore  README.md
hardware/custom components/Esper_Footprints.pretty/: AMPHENOL_10118192-0001LF.kicad_mod  CNC_3220-10-0100-00.kicad_mod
hardware/enclosure/: Enclosure.FCStd  Enclosure.FCStd1  EnclosureBottom.stl  EnclosureBottom_0.15mm_PLA_MK3S_59m.gcode  EnclosureDome.stl  EnclosureTop.stl  EnclosureTop_0.15mm_PLA_MK3S_1h35m.gcode
hardware/product/: ESP32.sch  EsperDNS-cache.lib  EsperDNS-rescue.lib  _autosave-Page 1.sch  _autosave-Page 2.sch  sym-lib-table
hardware/product/Product-Progamming Header/: ESP32.sch-bak  EsperDNS-rescue.lib  EsperDNS.kicad_pcb  EsperDNS.kicad_pcb-bak  EsperDNS.sch  Ethernet.sch-bak  fp-info-cache  fp-lib-table
hardware/product/Product-Programmable/: ESP32.sch  ESP32.sch-bak  EsperDNS-cache.lib  EsperDNS.pro  (+5 more)
hardware/programmer/: fp-info-cache  programmer-cache.lib  programmer-rescue.lib  programmer.kicad_pcb  programmer.kicad_pcb-bak  programmer.pro  programmer.sch  programmer.sch-bak  sym-lib-table
software/: README.md  ToDo.md  ToDo.txt  build.bat  build.sh  send.sh
software/Documentation/: Http Endpoints.txt
software/Tests/: ToDo.md
software/defaultBlacklist/: blacklist.txt
software/firmware/: .gitignore  CMakeLists.txt  Makefile  README.md  erase.bat  flash.bat  monitor.bat  partitions_table.csv  sdkconfig  sdkconfig.defaults
software/firmware/components/http/: CMakeLists.txt  application.c  configuration.c  webserver.c  webserver.h
software/firmware/components/http/application/: application.c  blacklist.c  home.c  settings.c
software/firmware/components/http/application/html/: blacklist.html  home.html  settings.html
software/firmware/components/http/application/include/: application.h  blacklist.h  home.h  settings.h
software/firmware/components/http/configuration/: configuration.c  connected.c  wifi_select.c
software/firmware/components/http/configuration/html/: connected.html  wifi_select.html
software/firmware/components/http/configuration/include/: configuration.h  connected.h  wifi_select.h
software/firmware/components/http/src/application/: blacklist.html  home.html  homepage.html  log.html  settings.html
software/firmware/components/http/src/configuration/: provfinished.html  provsettings.html  provwifi.html
software/scripts/: build.bat  build.sh  compress.py  reformat_blacklist.py  send.bat  send.sh  urls.txt
software/website/: .gitignore  config.toml
(+158 files in other folders)
